--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,9 @@
 {
     "printWidth": 120,
-    "parser": "typescript",
     "tabWidth": 2,
-    "semi": false,
+    "semi": true,
     "singleQuote": true,
-    "trailingComma": "all",
+    "trailingComma": "none",
     "bracketSpacing": true,
     "jsxBracketSameLine": true
   }
