--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.21.0",
     "eslint-config-universe": "^7.0.1",
+    "husky": "^5.1.1",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
   },
   "private": true
