--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "build:android": "expo build:android -t app-bundle",
+    "build:ios": "expo build:ios",
+    "fetch:keystore": "expo fetch:android:keystore"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -13,8 +16,12 @@
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-application": "^3.0.0",
+    "expo-auth-session": "^3.1.0",
     "expo-google-app-auth": "^8.1.4",
     "expo-status-bar": "~1.0.3",
+    "expo-web-browser": "^9.0.0",
+    "firebase": "^8.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
